--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-router-dom": "^7.5.0",
+    "react-router-dom": "^7.5.1",
     "react-tsparticles": "^2.12.2",
+    "three": "^0.175.0",
     "tsparticles": "^3.8.1"
   },
   "devDependencies": {
